Mudei caminho das imagens

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div id="SLIDEBG"></div>
    <div class="instagram-wrapper">
        <div class="instagram-phone">
-           <img src="C:\Users\lhoco\OneDrive\Programação\Blackgram\instagram\cel.png" alt="celular com o instagram aberto">
+           <img src="instagram\cel.png" alt="celular com o instagram aberto">
        </div>
    <div class="instagram-continue">
        <div class="group">
-        <img src="C:\Users\lhoco\OneDrive\Programação\Blackgram\instagram\logo (1).png" class="gamergram-logo" alt="logo do gamergram">
+        <img src="instagram\logo (1).png" class="gamergram-logo" alt="logo do gamergram">
         <div class="profilephoto">
             <img src="C:\Users\lhoco\OneDrive\Programação\Blackgram\instagram\image.png" alt="foto de perfil">
          </div>
