--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
        <div class="group">
         <img src="instagram\logo (1).png" class="gamergram-logo" alt="logo do gamergram">
         <div class="profilephoto">
-            <img src="C:\Users\lhoco\OneDrive\Programação\Blackgram\instagram\image.png" alt="foto de perfil">
+            <img src="instagram\image.png" alt="foto de perfil">
          </div>
          <a href="#" class="instagram-login">Continue como AfroJohnson</a>
          <a href="#" class="instagram-logout">Remover conta</a>
